<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MiauVet</string>

    <string name="btn_veterinarios">Veterinarios</string>
    <string name="btn_salir">Cerrar Sesión</string>

    <string name="btn_volver">Volver</string>
    <string name="hint_nombres">Nombres</string>
    <string name="hint_apellidos">Apellidos</string>

    <string name="title_veterinarios">Gestión de Veterinarios</string>
    <string name="btn_nuevo_veterinario">Nuevo Veterinario</string>

    <string name="title_pacientes">Gestión de Mascotas</string>
    <string name="btn_nuevo_paciente">Nueva Mascota</string>

    <string name="title_consultas">Historial de Consultas</string>
    <string name="btn_nueva_consulta">Registrar Consulta</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>